Freedom Sanbox Ant Deploy/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>test</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Meeting Done</fullName>
        </values>
        <values>
            <fullName>Meeting Fixed</fullName>
        </values>
        <values>
            <fullName>Meeting Follow-up</fullName>
        </values>
        <values>
            <fullName>Not Interested</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Age__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternate_Mobile__c</fullName>
        <label>Alternate Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Appointment_SMS__c</fullName>
        <label>Appointment SMS</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Time__c</fullName>
        <label>Appointment Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Christmas_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Christmas Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_date_Month__c</fullName>
        <formula>CASE( MONTH ( DATEVALUE( CreatedDate ) ) , 
1, &quot;January &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
2, &quot;Febuary &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
3, &quot;March &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
4, &quot;April &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
5, &quot;May &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
6, &quot;June &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
7, &quot;July &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
8, &quot;August &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
9, &quot;September &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
10, &quot;October &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
11, &quot;November &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
&quot;December &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ) )</formula>
        <label>Created date Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_CTC__c</fullName>
        <description>Field for Web to Lead on Careers page</description>
        <label>Current CTC</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_CTC__c</fullName>
        <description>Field for Web to Lead-Careers</description>
        <label>Expected CTC</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ffreedom_Score_Explanation__c</fullName>
        <label>Ffreedom Score Explanation</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ffreedom_Score_Question_Eight__c</fullName>
        <inlineHelpText>Have you taken enough health insurance for your family?</inlineHelpText>
        <label>Ffreedom Score Question Eight</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ffreedom_Score_Question_Five__c</fullName>
        <inlineHelpText>Do you know how much cash/cash equivalent is required for the same?</inlineHelpText>
        <label>Ffreedom Score Question Five</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ffreedom_Score_Question_Four__c</fullName>
        <inlineHelpText>Do you have cash (easily accessible) to maintain your lifestyle in case of  job/income 
loss?</inlineHelpText>
        <label>Ffreedom Score Question Four</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ffreedom_Score_Question_Nine__c</fullName>
        <inlineHelpText>Are all your personal properties insured against disasters or calamities?</inlineHelpText>
        <label>Ffreedom Score Question Nine</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ffreedom_Score_Question_One__c</fullName>
        <inlineHelpText>Have you prepared a budget for your household expenses?</inlineHelpText>
        <label>Ffreedom Score Question One</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ffreedom_Score_Question_Seven__c</fullName>
        <inlineHelpText>Do you know how much insurance cover is required?</inlineHelpText>
        <label>Ffreedom Score Question Seven</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ffreedom_Score_Question_Six__c</fullName>
        <inlineHelpText>Have you taken life insurance cover?</inlineHelpText>
        <label>Ffreedom Score Question Six</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ffreedom_Score_Question_Ten__c</fullName>
        <inlineHelpText>How would you describe your overall income status?</inlineHelpText>
        <label>Ffreedom Score Question Ten</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ffreedom_Score_Question_Three__c</fullName>
        <inlineHelpText>What’s your monthly household expenditure?</inlineHelpText>
        <label>Ffreedom Score Question Three</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ffreedom_Score_Question_Two__c</fullName>
        <inlineHelpText>Do you follow your budgeting?</inlineHelpText>
        <label>Ffreedom Score Question Two</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ffreedom_Score__c</fullName>
        <inlineHelpText>Please add the Ffreedom Score here</inlineHelpText>
        <label>Ffreedom Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From_Portal__c</fullName>
        <label>From Portal</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ideal_time_to_call__c</fullName>
        <label>Ideal time to call</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Source__c</fullName>
        <label>Income Source</label>
        <picklist>
            <picklistValues>
                <fullName>Salaried</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business / Profession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inserted_From_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inserted From Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_In__c</fullName>
        <label>Interested In</label>
        <picklist>
            <picklistValues>
                <fullName>FP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Succession Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income Tax Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts &amp; Book Keeping</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interested_Role__c</fullName>
        <label>Interested Role</label>
        <picklist>
            <picklistValues>
                <fullName>Back end</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front end</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsLeadCreatedByPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be set to true when the partner creates a lead.</description>
        <label>IsLeadCreatedByPartner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSynched__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsSynched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUnsubscribe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsUnsubscribe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Campaign__c</fullName>
        <label>Latest Campaign</label>
        <picklist>
            <picklistValues>
                <fullName>ABC of Money for Whispering palms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BNI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diwali Chocolate Box Refferal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Just Dial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malad Medical Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan. Nature. Grow for POD&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purpose of Life for Whispering Palms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>True Fitness Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ffreedom Score Online App with Reliance Mutual Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA with Oracle Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ffreedom Score Online App with RMF (Only Enquiry)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BNI Creame</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle Financial Services (GO Building)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goldstar Jewellery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Happiness EXPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTVi Bloomberg - Smart Money</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>karamtara group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Study Circles - Bhayander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ffreedom Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netscribes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website - Careers Campaign</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Engine_Type__c</fullName>
        <label>Lead Engine Type</label>
        <picklist>
            <picklistValues>
                <fullName>Just Dial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sulekha Classifieds</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Name__c</fullName>
        <label>Lead Owner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Current /Permanent location</label>
        <picklist>
            <picklistValues>
                <fullName>Agartala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahmedabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahmednagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aizawal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ajmer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aligarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allahabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amritsar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anantapur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ankleshwar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asansol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aurangabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BALASORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bareilly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baroda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bathinda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgaum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bellary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bengaluru/Bangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHABUA, KAIMUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhagalpur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bharuch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhavnagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhillai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhopal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhubaneshwar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhuj</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Meeting #</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notice_Period__c</fullName>
        <label>Notice Period</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PST_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PST (Practice Success Team)</label>
        <referenceTo>Team_Member__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Platform_User_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Platform User Lead</label>
        <referenceTo>Lead_Platform_User__c</referenceTo>
        <relationshipLabel>Platform User Lead</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portal_Id__c</fullName>
        <label>Portal Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Parent_Entity__c</fullName>
        <label>Portal Parent Entity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreferredDepartment__c</fullName>
        <label>PreferredDepartment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_location__c</fullName>
        <label>Preferred location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <picklist>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <label>Referred By</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_by_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred by Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads(Refferals)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_by_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred by Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Leads(Refferals)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <label>Related To</label>
        <picklist>
            <picklistValues>
                <fullName>Ffreedom</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role_Position__c</fullName>
        <description>Field for Web to Lead Careers</description>
        <label>Role/Position</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Change_Date__c</fullName>
        <label>Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Synched_Date_Time__c</fullName>
        <label>Synched Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tribal_Activity_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tribal Activity Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Virtual_Partner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>To select related virtual partner.</description>
        <label>Practice Owner (Partner)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Virtual Partner)</relationshipLabel>
        <relationshipName>VirtualPartnerLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>is_Pathfinder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Pathfinder?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicbasic__SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tempReportDate__c</fullName>
        <label>tempReportDate</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>Planners</fullName>
        <filterScope>Queue</filterScope>
        <label>Planners</label>
        <queue>Planners</queue>
        <sharedTo>
            <group>ETeam</group>
            <group>FfreedomTeam</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>test</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Appointment_Time__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>1/31/2012 12:00 AM</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>fmark</value>
        </filters>
        <label>Leads inserted by shailesh</label>
        <sharedTo>
            <role>ExecutiveMktg</role>
            <role>Tech</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>General</fullName>
        <active>true</active>
        <businessProcess>test</businessProcess>
        <label>General</label>
    </recordTypes>
    <validationRules>
        <fullName>AppointmentTime_Required_For_Meeting_Don</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNULL( Appointment_Time__c ) ,ISPICKVAL( Status , &quot;Meeting Done&quot;))</errorConditionFormula>
        <errorDisplayField>Appointment_Time__c</errorDisplayField>
        <errorMessage>Please Enter The Appointment Time Before Changing The Lead Status To &quot;Meeting Done&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Appointment_Time_for_Meeting_Fixed</fullName>
        <active>true</active>
        <description>The Appointment time should be entered if the lead is in Meeting Fixed stage</description>
        <errorConditionFormula>AND(ISPICKVAL(Status, &apos;Meeting Fixed&apos;), ISNULL(Appointment_Time__c))</errorConditionFormula>
        <errorDisplayField>Appointment_Time__c</errorDisplayField>
        <errorMessage>Please Enter The Appointment Date And Time Before Changing The Lead Status To &quot;Meeting Fixed&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Before_Convert</fullName>
        <active>true</active>
        <description>Email is required fields for convert Lead</description>
        <errorConditionFormula>AND( ISPICKVAL( Status ,&apos;Converted&apos;) ,ISBLANK (Email ))</errorConditionFormula>
        <errorDisplayField>Age__c</errorDisplayField>
        <errorMessage>Email is Required to Lead Convert</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Business_Unit_for_PST</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Virtual_Partner__r.Business_Unit__c  &lt;&gt; 
PST_Team_Member__r.Department__r.Business_Unit__c)</errorConditionFormula>
        <errorDisplayField>PST_Team_Member__c</errorDisplayField>
        <errorMessage>PST Selected should have same Business Unit as that of Practice Owner.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Business_Unit_should_be_same</fullName>
        <active>false</active>
        <description>Business unit selected for Lead should be same as Business unit of Practice Owner.</description>
        <errorConditionFormula>Business_Unit__c &lt;&gt; Virtual_Partner__r.Business_Unit__c</errorConditionFormula>
        <errorDisplayField>Virtual_Partner__c</errorDisplayField>
        <errorMessage>Business unit selected for Lead should be same as Business unit of Practice Owner.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_Date_Required_For_Meeting_Done</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNULL( Close_Date__c ) ,ISPICKVAL( Status , &quot;Meeting Done&quot;))</errorConditionFormula>
        <errorDisplayField>Close_Date__c</errorDisplayField>
        <errorMessage>Please Enter The Close Date Before Changing The Lead Status To &quot;Meeting Done&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Compulsory_Fields_For_Meeting_Fixed</fullName>
        <active>false</active>
        <description>Inactivated because of &quot;Appointment_Time_for_Meeting_Fixed&quot; and this checking the same condition and Displaying Error Msg in top of Age field</description>
        <errorConditionFormula>AND(ISNULL( Appointment_Time__c ) ,ISPICKVAL( Status , &quot;Meeting Fixed&quot;))</errorConditionFormula>
        <errorDisplayField>Age__c</errorDisplayField>
        <errorMessage>Please Enter The Appointment Date And Time Before Changing The Lead Status To &quot;Meeting Fixed&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Compulsory_Fields_For_Meeting_Follow_Up</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(OR(ISPICKVAL( Rating , &quot;Hot&quot;),ISPICKVAL( Rating , &quot;Warm&quot;),ISPICKVAL( Rating , &quot;Cold&quot;))) , ISPICKVAL( Status , &quot;Meeting Follow-up&quot;) )</errorConditionFormula>
        <errorDisplayField>Rating</errorDisplayField>
        <errorMessage>Please Enter the Rating For This Lead Before Changing The Lead Status To Meeting Follow-up</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ffreedom_Score_Required_For_Meeting_Don</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNULL( Ffreedom_Score__c ) ,ISPICKVAL( Status , &quot;Meeting Done&quot;))</errorConditionFormula>
        <errorDisplayField>Ffreedom_Score__c</errorDisplayField>
        <errorMessage>Please Enter The Ffreedom Score Before Changing The Lead Status To &quot;Meeting Done&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Probability_Required_For_Meeting_Done</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(OR(ISPICKVAL( Probability__c , &quot;25%&quot;),ISPICKVAL( Probability__c , &quot;50%&quot;),ISPICKVAL( Probability__c , &quot;75%&quot;),ISPICKVAL( Probability__c , &quot;0%&quot;),ISPICKVAL( Probability__c , &quot;100%&quot;))) , ISPICKVAL( Status , &quot;Meeting Done&quot;) )</errorConditionFormula>
        <errorDisplayField>Probability__c</errorDisplayField>
        <errorMessage>Please Enter The Probability For This Lead Before Changing The Lead Status To Meeting Done</errorMessage>
    </validationRules>
</CustomObject>